--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "recuérdame"
+        "recuérdame",
+        "swiper"
     ],
     "livePreview.defaultPreviewPath": "/index.html"
 }
