Add Deals and Reviews Section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "recuérdame",
+        "suscribete",
         "swiper"
     ],
     "livePreview.defaultPreviewPath": "/index.html"
