--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,36 @@
 {
     "cSpell.words": [
+        "accusamus",
+        "adipisicing",
+        "adispisicing",
+        "aliquid",
+        "amet",
+        "Aperiam",
+        "Aspernatur",
+        "atque",
+        "cconsecteur",
+        "consectetur",
+        "consecteur",
+        "deserunt",
+        "dolore",
+        "dolorum",
+        "elit",
+        "exminima",
+        "facere",
+        "ipsa",
+        "Magnam",
+        "natus",
+        "necessitatibus",
+        "persipiciatis",
+        "placeat",
+        "quaerat",
         "recuérdame",
+        "similique",
         "suscribete",
-        "swiper"
+        "swiper",
+        "tempora",
+        "Unde",
+        "velit"
     ],
     "livePreview.defaultPreviewPath": "/index.html"
 }
